# AdventOfPython

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  README.md  copy_from_template.sh  pyproject.toml  requirements.txt  template.sh
aopy/a/: .day11.py.swp  __init__.py  day16.py  day19.profile  day19.py  day21.py  day3.py  template.py
aopy/b/: __init__.py  day0.py  day1.py  day13.py  day18.py  day6.py  day7.py  x.py
aopy/u/: template.py
inputs/: day19.txt
src/: animate_day14.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.profile  day17.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day5.py  day8.py  day9.py  template.py
tests/: template.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day19.py  test_day20.py  test_day22.py  test_day23.py  test_day24.py  test_day8.py  test_day9.py
tests/a/: __init__.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py  test_day3.py  test_day8.py  test_day9.py
tests/b/: __init__.py  test_day0.py  test_day1.py  test_day13.py  test_day18.py  test_day6.py  test_day7.py
